2000-04-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Basic.pm (orac_parse_recipe): Put upper limit on recursion depth

	* Core.pm (orac_process_frame): Modify so that orac_parse_recipe
	is not called multiple times by this routine since that routine is 
	now recursive.

	* Basic.pm (orac_parse_recipe): Read recipe primitives and parse
	using recursion. This is more efficient than reparsing the same
	recipe multiple times. Automatically ignore POD sections.

2000-03-30  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm: Correct pod NAME

2000-03-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/GAIA.pm: Check return value of recv() to prevent
	infinite loops.
	(launch): Simplify the launch sequence.
	(send_to_gaia):	Fix problems with Solaris recv() not returning
	status [had to check $! explcitly]
	
2000-02-23  Tim Jenness  <timj@jach.hawaii.edu>

	* Fix POD errors using podchecker
	
	* Print.pm: Correct pod errors

	* TempFile.pm: Correct pod error

2000-02-22  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/Michelle.pm: Add flag_from_bits

	* Inst/CGS4.pm (start_msg_sys): Use ORACDR_TMP

	* Inst/IRCAM.pm (start_msg_sys): Use ORACDR_TMP

	* Inst/SCUBA.pm (start_msg_sys): Use ORACDR_TMP

2000-01-31  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/CGS4.pm (start_msg_sys): Use ORAC_DATA_OUT for ADAM_USER

	* Inst/SCUBA.pm (start_msg_sys): Use $ORAC_DATA_OUT for $ADAM_USER

	* Basic.pm: Add $KAPVERSION_ global variables

	* Group.pm (subgrp): -w protection in use of name()
	(subgrp): Fix bug in key looping

	* Display/KAPVIEW.pm (sigma): Add support for KAPPA 0.14


2000-01-28  Tim Jenness  <timj@jach.hawaii.edu>

	* Loop.pm (orac_loop_flag): Pod update.

	* Display/GAIA.pm (create_dev): Add newdev method. Pass name into
	create_dev. 

	* Display/P4.pm: Pod updates

2000-01-27  Tim Jenness  <timj@jach.hawaii.edu>

	* Display/Base.pm (dev): Update pod. Check for existence of key
	before returning it.

	* Display/GAIA.pm (create_dev): Use noblock_clone rather than