@@ -1,3 +1,8 @@
+2000-04-04  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Basic.pm (orac_parse_recipe): Pod sections were not being
+	included in the recipes.
+
 2000-04-03  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Basic.pm (orac_parse_recipe): Put upper limit on recursion depth
